[lworld] Crash in LateInlineMHCallGenerator::do_late_inline_check

XMLWordPrintable

      test/hotspot/jtreg/compiler/exceptions/TestLateMHInlineExceptions.java fails with "-ea -esa -XX:CompileThreshold=100 -XX:-TieredCompilation":

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # SIGSEGV (0xb) at pc=0x00007f29d6698291, pid=22423, tid=22438
      #
      # JRE version: Java(TM) SE Runtime Environment (19.0) (fastdebug build 19-lworld3ea+0-2022-02-07-1432051.tobias.hartmann.valhalla)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 19-lworld3ea+0-2022-02-07-1432051.tobias.hartmann.valhalla, mixed mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x8e4291] LateInlineMHCallGenerator::do_late_inline_check(Compile*, JVMState*)+0xa1

      Current CompileTask:
      C2: 2079 257 % !b TestLateMHInlineExceptions::main @ 10 (88 bytes)

      Stack: [0x00007f29c0001000,0x00007f29c0102000], sp=0x00007f29c00fcd80, free space=1007k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x8e4291] LateInlineMHCallGenerator::do_late_inline_check(Compile*, JVMState*)+0xa1
      V [libjvm.so+0x8e0dc7] CallGenerator::do_late_inline_helper()+0x927
      V [libjvm.so+0xadef8d] Compile::inline_incrementally_one()+0x33d
      V [libjvm.so+0xae014f] Compile::inline_incrementally(PhaseIterGVN&)+0x18f
      V [libjvm.so+0xae1e9b] Compile::Optimize()+0x36b
      V [libjvm.so+0xae67ad] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x162d
      V [libjvm.so+0x8d7673] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x6c3
      V [libjvm.so+0xaf6498] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xc88
      V [libjvm.so+0xaf7258] CompileBroker::compiler_thread_loop()+0x668
      V [libjvm.so+0x19f64da] JavaThread::thread_main_inner()+0x25a
      V [libjvm.so+0x19fe820] Thread::call_run()+0x100
      V [libjvm.so+0x16b8ad4] thread_native_entry(Thread*)+0x104

            Assignee:
            Roland Westrelin
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: