8281378: [lworld] Crash in LateInlineMHCallGenerator::do_late_inline_check

Reviewed-by: thartmann